// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateMediaTypeObject given complex nested media type object should translate correctly 1`] = `
Object {
  "encodings": Array [
    Object {
      "headers": Array [
        Object {
          "content": Object {
            "nested/media": Object {},
          },
          "description": "descr",
          "encodings": Array [],
          "examples": Array [
            Object {
              "id": Any<String>,
              "key": "a",
              "summary": "example summary",
              "value": "hey",
            },
          ],
          "id": Any<String>,
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "id": Any<String>,
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "id": Any<String>,
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
}
`;

exports[`translateMediaTypeObject given encodings should translate each encoding to array item 1`] = `
Object {
  "encodings": Array [
    Object {
      "allowReserved": true,
      "explode": true,
      "headers": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "id": Any<String>,
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
    Object {
      "allowReserved": true,
      "explode": true,
      "headers": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "id": Any<String>,
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc2",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "id": Any<String>,
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "id": Any<String>,
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
}
`;

exports[`translateMediaTypeObject given multiple examples should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "id": Any<String>,
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "id": Any<String>,
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
}
`;

exports[`translateMediaTypeObject given single example should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "id": Any<String>,
      "key": "default",
      "value": "hey",
    },
  ],
  "id": Any<String>,
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
}
`;

exports[`translateMediaTypeObject should skip nullish headers 1`] = `
Object {
  "encodings": Array [
    Object {
      "headers": Array [],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "id": Any<String>,
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "id": Any<String>,
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight": Object {
      "id": Any<String>,
    },
  },
}
`;
